--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,6 +46,26 @@ nav {
     margin: 0 auto;
 }
 
+.search-bar{
+    border: none;
+    border-radius: 50px;
+    padding: 10px 25px;
+    margin: 10px;
+    height: 20px;
+    width: 500px;
+    border:1px solid #eaeaea;
+    outline:none;
+}
+
+.center-elements button {
+    border-radius: 8px;
+    background: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    cursor: default;
+    font-size: 14px;
+    padding: 0 16px;
+    height:36px;
+}
 
 
 /* 
