--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,8 +59,8 @@ nav {
 
 .center-elements button {
     border-radius: 8px;
-    background: #f2f2f2;
-    border: 1px solid #f2f2f2;
+    background: #f8f9fa;
+    border: 1px solid #f8f9fa;
     cursor: default;
     font-size: 14px;
     padding: 0 16px;
